--- a/src/components/app.css
+++ b/src/components/app.css
@@ -4,14 +4,21 @@
 
 .App-logo {
   /*animation: App-logo-spin infinite 20s linear;*/
-  height: 80px;
+  height: 3rem;
+  vertical-align: middle;
+  margin-right: 1rem;
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+  background-color: rgba(0,0,0,0.8);
+  height: 80px;
+  width: 100%;
+  padding: 1rem;
   color: white;
+  z-index: 20;
+  position: absolute;
+  top:0;
+  left:0;
 }
 
 .App-intro {
