--- a/src/components/maps.css
+++ b/src/components/maps.css
@@ -1,4 +1,8 @@
 .Map {
-    height: calc(100vh - 360px);
+    position: absolute;
+    top:0;
+    left:0;
+    height: 100%;
     width: 100%;
+    z-index: 0;
 }
