--- a/src/components/app.css
+++ b/src/components/app.css
@@ -1,9 +1,4 @@
-/* .App {
-  text-align: center;
-} */
-
-.App-logo {
-  /*animation: App-logo-spin infinite 20s linear;*/
+.App-logo {  
   height: 3rem;
   vertical-align: middle;
   margin-right: 1rem;
@@ -20,6 +15,10 @@
   top:0;
   left:0;
 }
+.App-Title {
+  transform: translateX(-100%);
+  animation: App-Title-Slide forwards 1s linear 0.5s;
+}
 
 .App-intro {
   font-size: large;
@@ -28,7 +27,7 @@
   padding: 1rem;
 }
 
-/* @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-} */
+@keyframes App-Title-Slide {
+  from { transform: translateX(-100%); }
+  to { transform: translateX(0%); }
+} 
